--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,54 @@
-@import "./variables.css";
+@import './variables.css';
 body{
   font-family: var(--font-main);
+  font-weight: 600;
+}
+
+a,
+button,
+input,
+textarea,
+select,
+svg * {
+  transition-duration: var(--main-transition);
+}
+
+h2,
+h3,
+h4,
+a{
+  color: var(--color-text-dark);
+}
+
+p{
+  color: var(--color-text-light);
+  font-size: 0.875rem;
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+h1{
+  font-size: clamp(0.75rem, 2.08vw, 2.5rem);
+
+}
+
+h2{
+  font-size: clamp(1rem, 1.66vw, 2rem);
+}
+
+h3{
+  font-size: clamp(1.25rem, 1.04vw, 1rem);
+}
+
+h4{
+  font-size: clamp(1.125rem, 0.9375vw, 0.875rem);
+}
+
+@media (hover: hover) {
+  a:hover{
+    color: var(--color-red-accent);
+  }
 }
