header with phone container

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,7 +10,7 @@
 .headerTop{
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .headerTopLinks{
@@ -37,3 +37,7 @@
 }
 
 .headerTopNav{}
+
+.headerBottom{
+
+}
