--- a/src/components/UI/NavLink/NavLinks.module.css
+++ b/src/components/UI/NavLink/NavLinks.module.css
@@ -1,6 +1,7 @@
-.header__top-link{
+.headerTopLink{
   color: var(--color-text-light);
 }
-.header__top-link:hover{
+.headerTopLink:hover{
   color: var(--color-text-dark);
 }
+.headerTopItem{}
