--- a/src/components/UI/Logo/Logo.css
+++ b/src/components/UI/Logo/Logo.css
@@ -1,4 +1,10 @@
 .headerLogo{
   width: 27.625rem;
-  height: 2.25rem;
+  height: auto;
+}
+
+@media (max-width: 48rem) {
+  .headerLogo{
+    width: max(14.625rem, 57.55vw);
+  }
 }
