--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,6 +5,7 @@
   --color-text-light: #999999;
   --color-text-white: #FFFFFF;
   --color-text-f5: #F5F5F5;
+  --color-black: #000000;
 
   --font-main: 'Inter', sans-serif;
 
