--- a/src/components/Header/parts/CitySelect/CitySelect.module.css
+++ b/src/components/Header/parts/CitySelect/CitySelect.module.css
@@ -12,7 +12,7 @@
 .selectTrigger{
   cursor: pointer;
   display: flex;
-  width: 9.5rem;
+  width: 10rem;
   justify-content: space-between;
   align-items: center;
   color: var(--color-text-light);
@@ -32,13 +32,18 @@
 }
 
 .selectValue{
-
+  padding-left: 0.5rem;
 }
 .selectList{
+  white-space: nowrap;
   position: absolute;
   top: 100%;
+  width: 10rem;
   left: 2.3125rem;
   color: var(--color-text-light);
+  background-color: rgba(255, 255, 255, 0.69);
+  padding: 0 0.5rem 0.5rem 0.5rem;
+  border-radius: 0 0 10px 10px;
 }
 .selectOption{
   cursor: pointer;
