--- a/src/components/UI/Phone/Phone.module.css
+++ b/src/components/UI/Phone/Phone.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
+  text-align: right;
+  white-space: nowrap;
 }
 
 .phoneContainerLink{
