--- a/src/components/Header/parts/HeaderTopMobile/HeaderTopMobile.module.css
+++ b/src/components/Header/parts/HeaderTopMobile/HeaderTopMobile.module.css
@@ -7,40 +7,48 @@
 .burgerButton{
   height: clamp(1.5rem, 4.67578125vw, 2.244375rem);
   aspect-ratio: 1;
-  background-color: #FF7255;
+  background-color: transparent;
   outline: none;
   border: none;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
+  flex-direction: column;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .burgerSpan{
   display: block;
-  width: 25%;
-  height: 2px;
   background-color: var(--color-black);
-  position: relative;
   border-radius: 1rem;
-}
-
-.burgerSpan::after,
-.burgerSpan::before{
-  width: 200%;
   height: 2px;
-  content: "";
-  display: block;
-  background-color: var(--color-black);
-  position: absolute;
+  transition: all var(--main-transition);
+  transform-origin: center;
 }
 
-.burgerSpan::before{
-  right: 0;
-  bottom: clamp(0.3125rem, 1.3020vw ,0.625rem);
+.burgerSpan:not(:first-child, :last-child){
+  width: 25%;
+  margin-block: clamp(0.3125rem, 1.0416vw , 0.5rem);
+  margin-left: 25%;
 }
 
-.burgerSpan::after{
-  right: 0;
-  top: clamp(0.3125rem, 1.3020vw ,0.625rem);
+.burgerSpan:is(:first-child, :last-child){
+  width: 50%;
 }
 
+.burgerSpanOpen:not(:first-child, :last-child){
+  opacity: 0;
+  margin-block: -2px;
+}
+
+.burgerSpanOpen:is(:first-child, :last-child) {
+  width: 75%;
+}
+
+.burgerSpanOpen:first-child{
+  rotate: -45deg;
+}
+
+.burgerSpanOpen:last-child{
+  rotate: 45deg;
+}
