--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,10 +5,17 @@
   flex-direction: column;
   gap: 0.75rem;
   align-items: center;
+  position: fixed;
+  width: 100%;
 }
 
 @media (max-width: 70.3125rem) {
   .header{
     padding-block: 0.75rem;
   }
+}
+
+.locationIcon{
+  margin-right: 0.75rem;
+  user-select: none;
 }
