--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -6,6 +6,7 @@
   --color-text-white: #FFFFFF;
   --color-text-f5: #F5F5F5;
   --color-black: #000000;
+  --color-gray-light: #d9d9d9;
 
   --font-main: 'Inter', sans-serif;
 
@@ -13,6 +14,8 @@
 
   --container-width: 92.5rem;
   --padding-x: 1rem;
+
+  --gray-border: 2px solid var(--color-gray-light);
 }
 
 /* @import "../../styles/variables.css"; */
