--- a/src/components/Header/parts/HeaderTop/HeaderTop.module.css
+++ b/src/components/Header/parts/HeaderTop/HeaderTop.module.css
@@ -17,7 +17,7 @@
   column-gap: 1.875rem;
 }
 
-@media (max-width: 80rem) {
+@media (max-width: 81rem) {
   .headerTopList{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -34,6 +34,18 @@
   width: 2px;
   background-color: rgba(0, 0, 0, 0.15);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+.headerTopLocation{
+  display: flex;
+}
+
+.headerTopIcon{
+  fill: transparent;
+}
+
+.headerTopIcon path{
+  stroke: var(--color-text-light);
 }
 
 .headerTopNav{}
