--- a/src/components/Header/parts/CitySelect/CitySelect.module.css
+++ b/src/components/Header/parts/CitySelect/CitySelect.module.css
@@ -41,7 +41,7 @@
   top: 100%;
   width: 11rem;
   color: var(--color-text-light);
-  background-color: rgba(255, 255, 255, 0.69);
+  background-color: var(--color-text-white);
   padding: 0 0.5rem 0.5rem 0.5rem;
   border-radius: 0 0 10px 10px;
 }
