--- a/src/components/Header/parts/HeaderModal/HeaderModal.module.css
+++ b/src/components/Header/parts/HeaderModal/HeaderModal.module.css
@@ -1,6 +1,7 @@
 .headerModalInner{
-  height: 100dvh;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .modalUp{
@@ -10,7 +11,9 @@
 }
 
 .modalDown{
-
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .modalUpLocation{
@@ -29,18 +32,28 @@
 }
 
 .modalDownPhone{
-
+  display: flex;
+  align-items: flex-start;
+  column-gap: 0.5rem;
+  padding-block: 0.75rem 0.5rem;
+  border-block: var(--gray-border);
+  padding-left: 1.1875rem;
 }
 
 .modalDownSoc1als{
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-block: 2rem;
 }
 
 .locationIcon{
-  fill: transparent;
   padding-top: 0.421875rem;
+  fill: transparent;
+  stroke: var(--color-accent);
 }
 
-.locationIcon path{
-  stroke: var(--color-accent);
+.phoneIcon{
+  padding-top: 0.1875rem;
+  fill: var(--color-accent);
 }
