--- a/src/components/Header/parts/HeaderModal/HeaderModal.module.css
+++ b/src/components/Header/parts/HeaderModal/HeaderModal.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .modalUp{
@@ -14,6 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  row-gap: 2rem;
 }
 
 .modalUpLocation{
@@ -44,7 +46,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-block: 2rem;
   column-gap: 0.5rem;
 }
 
