--- a/src/components/Header/parts/HeaderTopMobile/HeaderTopMobile.module.css
+++ b/src/components/Header/parts/HeaderTopMobile/HeaderTopMobile.module.css
@@ -1,7 +1,25 @@
+.headerInner{
+  width: 100%;
+}
+
+.headerInnerOpen{
+  width: 100%;
+  height: 100dvh;
+  padding-bottom: 2rem;
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
 .headerTopMobile{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 100;
+  width: 100%;
+}
+
+.headerTopMobileOpen{
+  padding-bottom: 1.375rem;
 }
 
 .burgerButton{
