--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,8 +5,9 @@
   flex-direction: column;
   gap: 0.75rem;
   align-items: center;
-  position: fixed;
   width: 100%;
+  position: sticky;
+  top: 0;
 }
 
 @media (max-width: 70.3125rem) {
