--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,14 @@ svg * {
   transition-duration: var(--main-transition);
 }
 
+a:focus-visible,
+button:focus-visible,
+input:focus-visible,
+textarea:focus-visible,
+select:focus-visible{
+  outline: 1px solid var(--color-black);
+}
+
 h2,
 h3,
 h4,
