--- a/src/components/Header/parts/HeaderTopMobile/HeaderTopMobile.module.css
+++ b/src/components/Header/parts/HeaderTopMobile/HeaderTopMobile.module.css
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.headerTopMobileSearch{
+  padding-bottom: 0.75rem;
+}
+
 .headerInnerOpen{
   width: 100%;
   height: 100dvh;
@@ -69,6 +73,46 @@
   rotate: 45deg;
 }
 
+.headerButtons{
+  display: flex;
+  column-gap: clamp(1rem, 2.84vw, 2rem);
+}
+
+.searchButton{
+  width: clamp(1.5rem, 4.67578125vw, 2.244375rem);
+  aspect-ratio: 1;
+  border: none;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchIcon{
+  width: clamp(1rem, 3.125vw, 1.5rem);
+  aspect-ratio: 1;
+  stroke: var(--color-black);
+  fill: transparent;
+}
+
 .noScroll{
   overflow-y: hidden !important;
+}
+
+@media (hover: none) {
+  .burgerButton:active .burgerSpan{
+    background-color: var(--color-accent);
+  }
+  .searchButton:active .searchIcon{
+    stroke: var(--color-accent);
+  }
+}
+
+@media (hover: hover) {
+  .burgerButton:hover .burgerSpan{
+    background-color: var(--color-accent);
+  }
+  .searchButton:hover .searchIcon{
+    stroke: var(--color-accent);
+  }
 }
