--- a/src/components/UI/BasketButton/BasketButton.module.css
+++ b/src/components/UI/BasketButton/BasketButton.module.css
@@ -3,10 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   row-gap: 0.5rem;
   border: none;
-  padding-inline: 1.0625rem;
-  padding-block: 0.6875rem;
+  height: 4.375rem;
+  width: 5rem;
   background-color: transparent;
 }
 
