--- a/src/components/Header/parts/CitySelect/CitySelect.module.css
+++ b/src/components/Header/parts/CitySelect/CitySelect.module.css
@@ -32,6 +32,10 @@
 }
 
 .selectList{
+  box-shadow:
+    5px 4px 5px 0 rgba(0, 0, 0, 0.4),
+    -4px 4px 5px 0 rgba(0, 0, 0, 0.1)
+;
   white-space: nowrap;
   position: absolute;
   display: flex;
@@ -49,7 +53,6 @@
   cursor: pointer;
 }
 
-/* Mobile */
 .selectTriggerMobile{
   flex-direction: column;
   align-items: flex-start;
