--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,12 @@
 .header{
   background-color: var(--color-text-white);
-  padding-block: 1.5rem 0.5rem;
+  padding-top: 1.5rem;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
   align-items: center;
   width: 100%;
-  position: sticky;
+  position: relative;
   top: 0;
 }
 
@@ -20,4 +20,14 @@
 .locationIcon{
   margin-right: 0.75rem;
   user-select: none;
+}
+
+.headerBottom{
+  padding-bottom: 0.5rem;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-text-white);
 }
