--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,9 +5,6 @@
   flex-direction: column;
   gap: 0.75rem;
   align-items: center;
-  width: 100%;
-  position: relative;
-  top: 0;
 }
 
 @media (max-width: 70.3125rem) {
@@ -30,4 +27,5 @@
   display: flex;
   justify-content: center;
   background-color: var(--color-text-white);
+  z-index: 200;
 }
