--- a/src/components/Header/parts/HeaderModal/HeaderModal.module.css
+++ b/src/components/Header/parts/HeaderModal/HeaderModal.module.css
@@ -59,6 +59,18 @@
 }
 
 .phoneIcon{
-  padding-top: 0.1875rem;
+  padding-top: 3px;
   fill: var(--color-accent);
+}
+
+.headerPhone{
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.25rem;
+}
+
+.headerPhoneText{
+  font-size: clamp(0.75rem, 0.83vw ,1rem);
+  font-weight: 500;
+  line-height: 1;
 }
