--- a/src/components/UI/NavLink/NavLinks.module.css
+++ b/src/components/UI/NavLink/NavLinks.module.css
@@ -1,24 +1,34 @@
-.headerTopLink{
+.TopLink{
   color: var(--color-text-light);
   font-weight: 500;
+  font-size: 1rem;
 }
 
-.headerTopItem{
+.Item{
   list-style: none;
+  line-height: 1rem;
 }
 
-.headerTopLinkMobile{
+.TopLinkMobile{
   font-size: 1.125rem;
-  color: var(--color-black);
 }
+
+.isBlack{
+  color: var(--color-text-dark);
+}
+
 
 @media (hover: none) {
-  .headerTopLinkMobile:active{
-    color: var(--color-text-light);
+  .TopLinkMobile:active{
     transform: scale(0.98);
+  }
+  .isBlack:active{
+    color: var(--color-text-light);
   }
 }
 
-.headerTopItemMobile{
-  line-height: 1rem;
+@media (hover: hover) {
+  .isBlack:hover{
+    color: var(--color-text-light);
+  }
 }
