--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,4 +3,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.footerTop{
+  border-block: var(--gray-border);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footerBottom{
+  text-align: center;
+  font-weight: 500;
+  font-size: clamp(0.75rem, 1.33vw, 1rem);
+  padding-block: 0.75rem;
 }
