--- a/src/components/Footer/parts/FooterTop/FooterTop.module.css
+++ b/src/components/Footer/parts/FooterTop/FooterTop.module.css
@@ -1,6 +1,7 @@
 .footerTopInner{
   display: flex;
   justify-content: space-between;
+  padding-block: clamp(0.75rem, 2vw, 1.5rem);
 }
 
 .innerLeft{
@@ -16,38 +17,40 @@
 }
 
 .innerRight{
-
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.25rem;
 }
 
 .footerLinks{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 5.5rem;
-  row-gap: 1.875rem;
+  column-gap: clamp(2rem, 4.58vw, 5.5rem);
+  row-gap: clamp(1rem, 2.5vw, 1.875rem);
 }
 
 .navigationText{
-  font-size: clamp(1rem, 1.7777vw,1.25rem);
+  font-size: 1.25rem;
   line-height: 1;
   color: var(--color-text-dark);
-  margin-bottom: 1.5rem;
+  margin-bottom: clamp(1rem, 2vw, 1.5rem);
 }
 
 .timePhoneContainer{
   display: flex;
   flex-direction: column;
-  row-gap: 0.75rem;
+  row-gap: clamp(0.5rem, 1vw, 0.75rem);
   align-items: center;
 }
 
 .middleText{
-  font-size: clamp(0.75rem, 0.83vw ,1rem);
+  font-size: clamp(0.75rem, 1.33vw ,1rem);
   font-weight: 500;
   line-height: 1;
 }
 
 .timeOfWork{
-  font-size: clamp(1.125rem, 1.25vw ,1.5rem);
+  font-size: clamp(1.125rem, 2vw ,1.5rem);
   line-height: 1;
 }
 
@@ -61,18 +64,45 @@
   fill: var(--color-accent);
 }
 
-@media (hover: hover) {
-  .vkLink:hover .vkIcon path{
-    fill: var(--color-red-accent);
-  }
+.downloadText{
+  font-size: clamp(0.75rem, 1.33vw ,1rem);
+  font-weight: 500;
+  line-height: 1.4;
+  text-align: right;
 }
 
-@media (hover: none) {
-  .vkLink:active .vkIcon path{
-    fill: var(--color-red-accent);
-  }
+.socials{
+  display: flex;
+  justify-content: flex-end;
+  column-gap: 0.5rem;
 }
 
-.vkLink:active .vkIcon{
+@media (max-width: 75rem) {
+  .footerTopInner{
+    flex-direction: column;
+    justify-content: center;
+  }
 
+  .innerLeft{
+    text-align: center;
+    padding-bottom: clamp(0.75rem, 2vw, 1.5rem);
+  }
+
+  .footerLinks{
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: auto;
+  }
+
+  .innerMiddle{
+    padding-block: clamp(0.75rem, 2vw, 1.5rem);
+  }
+
+  .innerRight{
+    align-items: center;
+  }
+
+  .downloadText{
+    text-align: center;
+  }
 }
