--- a/src/components/UI/Phone/Phone.module.css
+++ b/src/components/UI/Phone/Phone.module.css
@@ -14,7 +14,8 @@
 }
 
 .phoneContainerLink{
-  font-size: clamp(1.125rem, 1.25vw ,1.5rem);
+  white-space: nowrap;
+  font-size: clamp(1.125rem, 2vw ,1.5rem);
   line-height: 1;
 }
 
