--- a/src/components/UI/ProfileLink/ProfileLink.module.css
+++ b/src/components/UI/ProfileLink/ProfileLink.module.css
@@ -1,14 +1,5 @@
-.profileButton{
-  white-space: nowrap;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  row-gap: 0.5rem;
-  border: none;
-  height: 4.375rem;
-  width: 5rem;
-  background-color: transparent;
+.profileLink{
+
 }
 
 .points{
@@ -32,25 +23,25 @@
 }
 
 @media (hover: hover) {
-  .profileButton:hover .profileIcon{
+  .profileLink:hover .profileIcon{
     stroke: var(--color-accent);
   }
-  .profileButton:hover .pointsText{
+  .profileLink:hover .pointsText{
     color: var(--color-accent);
   }
-  .profileButton:hover .pointsIcon{
+  .profileLink:hover .pointsIcon{
     fill: var(--color-accent);
   }
 }
 
 @media (hover: none) {
-  .profileButton:active .profileIcon{
+  .profileLink:active .profileIcon{
     stroke: var(--color-accent);
   }
-  .profileButton:active .pointsText{
+  .profileLink:active .pointsText{
     color: var(--color-accent);
   }
-  .profileButton:active .pointsIcon{
+  .profileLink:active .pointsIcon{
     fill: var(--color-accent);
   }
 }
