--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -16,4 +16,6 @@
   --padding-x: 1rem;
 
   --gray-border: 2px solid var(--color-gray-light);
+
+  --main-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
