--- a/src/components/LoginBlock/LoginBlock.module.css
+++ b/src/components/LoginBlock/LoginBlock.module.css
@@ -6,7 +6,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
 }
 
 .loginBlock{
@@ -28,7 +27,7 @@
 }
 
 .changeBlock{
-  height: 5rem;
+  height: clamp(4rem, 10.416vw,5rem);
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -39,7 +38,7 @@
   transition: all 0.5s;
   text-transform: uppercase;
   color: var(--color-black);
-  font-size: 2rem;
+  font-size: clamp(1rem, 4.16vw,2rem);
 }
 
 .activeButton{
@@ -76,12 +75,15 @@
   .loginBlock{
     width: 100%;
     height: 100%;
+    box-shadow: none;
   }
+
   .loginBody{
     background: var(--color-text-white);
   }
-  .changeButton{
-    font-size: clamp(1rem, 3.125vw, 1.5rem);
+
+  .loginBody main{
+    height: 100vh;
   }
 }
 
