--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,6 +7,7 @@
   --color-text-f5: #F5F5F5;
   --color-black: #000000;
   --color-gray-light: #d9d9d9;
+  --color-red: #ff0000;
 
   --font-main: 'Inter', sans-serif;
 
