--- a/src/components/UI/LoginComponents/LoginComponents.module.css
+++ b/src/components/UI/LoginComponents/LoginComponents.module.css
@@ -65,6 +65,10 @@
   scale: 0.98;
 }
 
+.isLoading{
+  opacity: 0.5;
+}
+
 .checkboxContainer{
   display: flex;
   align-items: flex-start;
@@ -107,6 +111,10 @@
 .checkboxLink{
   color: var(--color-accent);
   text-decoration: underline;
+}
+
+.isRed{
+  border: 2px solid var(--color-red);
 }
 
 @media (hover: hover) {
