--- a/src/components/UI/LoginComponents/LoginComponents.module.css
+++ b/src/components/UI/LoginComponents/LoginComponents.module.css
@@ -8,6 +8,7 @@
   caret-color: var(--color-accent);
   color: var(--color-black);
   width: 100%;
+  background-color: var(--color-text-white);
 }
 
 .passwordInput{
