--- a/src/components/LoginContainer&RecoverContainer/LoginAndRecoverContainers.module.css
+++ b/src/components/LoginContainer&RecoverContainer/LoginAndRecoverContainers.module.css
@@ -10,7 +10,7 @@
 
 .loginBlock{
   width: 37.5rem;
-  min-height: 50rem;
+  min-height: 50.5rem;
   background-color: var(--color-text-white);
   box-shadow: var(--main-shadow);
   display: grid;
@@ -30,6 +30,12 @@
   height: clamp(4rem, 10.416vw,5rem);
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.changeBlockFlex{
+  height: clamp(4rem, 10.416vw,5rem);
+  display: flex;
+  background-color: var(--color-accent);
 }
 
 .changeButton{
@@ -53,7 +59,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
 }
 
 .loginInnerUp{
