--- a/src/components/LoginContainer&RecoverContainer/LoginContainer/parts/Parts.module.css
+++ b/src/components/LoginContainer&RecoverContainer/LoginContainer/parts/Parts.module.css
@@ -37,10 +37,16 @@
   color: var(--color-red);
 }
 
+.linkContainer{
+  display: flex;
+  justify-content: flex-start;
+}
+
 .linkForm{
   font-size: 1rem;
   color: var(--color-text-light);
   cursor: pointer;
+  font-weight: 600;
 }
 
 .confirmation{
