--- a/src/components/Footer/parts/FooterTop/FooterTop.module.css
+++ b/src/components/Footer/parts/FooterTop/FooterTop.module.css
@@ -1,6 +1,6 @@
 .footerTopInner{
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   padding-block: clamp(0.75rem, 2vw, 1.5rem);
 }
 
@@ -20,12 +20,12 @@
   display: flex;
   flex-direction: column;
   row-gap: 1.25rem;
+  align-items: flex-end;
 }
 
 .footerLinks{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: clamp(2rem, 4.58vw, 5.5rem);
+  grid-template-columns: auto auto;
   row-gap: clamp(1rem, 2.5vw, 1.875rem);
 }
 
@@ -79,6 +79,7 @@
 
 @media (max-width: 75rem) {
   .footerTopInner{
+    display: flex;
     flex-direction: column;
     justify-content: center;
   }
