--- a/src/components/MainContainer/Slider/Slider.module.css
+++ b/src/components/MainContainer/Slider/Slider.module.css
@@ -7,6 +7,7 @@
   width: 100%;
   box-sizing: border-box;
   max-width: calc(var(--container-width) + var(--padding-x) + var(--padding-x));
+  overflow-x: hidden;
 }
 
 .sliderImage{
