--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,7 @@ select:focus-visible{
   outline: 1px solid var(--color-black);
 }
 
+h1,
 h2,
 h3,
 h4,
@@ -44,7 +45,7 @@ a{
 }
 
 h1{
-  font-size: clamp(0.75rem, 3.33vw, 2.5rem);
+  font-size: clamp(1.5rem, 3.33vw, 2.5rem);
 }
 
 h2{
