--- a/src/components/AboutUsContainer/AboutUsContainer.module.css
+++ b/src/components/AboutUsContainer/AboutUsContainer.module.css
@@ -31,18 +31,20 @@
 }
 
 .AboutGallery{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
 }
 
 .AboutGalleryCards{
   display: grid;
   grid-template-columns: auto auto;
-  gap: 5rem;
+  gap: clamp(2rem, 6.15vw, 5rem);
+  max-width: 46.25rem;
 }
 
 .AboutGalleryImages{
-  display: grid;
+  display: flex;
+  flex-direction: column;
   row-gap: 3.375rem;
   justify-content: flex-end;
 }
@@ -52,4 +54,17 @@
   justify-content: space-between;
   display: flex;
   column-gap: 1.25rem;
+}
+
+@media (max-width: 81.25rem) {
+  .AboutGallery{
+    row-gap: 2rem;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 43.75rem) {
+  .AboutGalleryCards{
+    grid-template-columns: auto;
+  }
 }
