--- a/src/components/AboutUsContainer/AboutUsContainer.module.css
+++ b/src/components/AboutUsContainer/AboutUsContainer.module.css
@@ -1,5 +1,6 @@
 .AboutUsInner{
-  padding-top: clamp(0.75rem, 2vw, 1.5rem);
+  padding-top: var(--container-padding-top);
+  padding-bottom: var(--container-padding-bottom);
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
@@ -12,18 +13,20 @@
   border-radius: var(--main-border-radius);
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
+  row-gap: clamp(0.5rem, 1.33vw, 1rem);
   align-items: flex-start;
   padding-block: clamp(0.75rem, 1.5vw,1.125rem);
   padding-inline: clamp(1rem, 2vw, 1.5rem);
+  transition: background-color var(--main-transition), translate 1s;
 }
 
-.AboutTitle{
+.AboutTitle,
+.AboutSmallTitle{
   line-height: 1;
 }
 
 .AboutParagraph{
-  font-size: clamp(0.875rem, 2vw, 1.5rem);
+  font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
 .AboutParagraphBlack{
@@ -38,14 +41,14 @@
 .AboutGalleryCards{
   display: grid;
   grid-template-columns: auto auto;
-  gap: clamp(2rem, 6.15vw, 5rem);
+  gap: 5rem;
   max-width: 46.25rem;
 }
 
 .AboutGalleryImages{
   display: flex;
   flex-direction: column;
-  row-gap: 3.375rem;
+  gap: 3.375rem;
   justify-content: flex-end;
 }
 
@@ -56,15 +59,41 @@
   column-gap: 1.25rem;
 }
 
+.whyCards{
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  align-items: center;
+}
+
 @media (max-width: 81.25rem) {
   .AboutGallery{
     row-gap: 2rem;
     flex-direction: column;
     align-items: center;
   }
+  .AboutGalleryCards,
+  .AboutGalleryImages{
+    gap: 1.5rem;
+  }
 }
+
+@media (max-width: 75rem) {
+  .whyCards{
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+}
+
 @media (max-width: 43.75rem) {
   .AboutGalleryCards{
     grid-template-columns: auto;
+  }
+}
+
+@media (hover: hover) {
+  .textCard:hover{
+    background-color: rgba(215, 215, 215, 0.41);
+    translate: 10px;
   }
 }
