--- a/src/components/AboutUsContainer/parts/AboutCard/AboutCard.module.css
+++ b/src/components/AboutUsContainer/parts/AboutCard/AboutCard.module.css
@@ -11,10 +11,11 @@
     linear-gradient(#FFCD1A, #FF40B2) border-box;
   border: 1px solid transparent;
   padding: 0.75rem;
+  transition: translate 1s;
 }
 
 .cardText{
-  font-size: clamp(1rem, 1.5vw, 1.125rem);
+  font-size: clamp(1rem, 2.57vw, 1.125rem);
   text-transform: uppercase;
   color: var(--color-text-dark);
   text-align: center;
@@ -22,4 +23,10 @@
 
 .cardImage{
 
+}
+
+@media (hover: hover) {
+  .card:hover{
+    translate: 0 -10px;
+  }
 }
