--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 0.75rem;
   align-items: center;
+  z-index: 200;
 }
 
 .headerBottom{
@@ -23,6 +24,8 @@
   .header{
     padding-block: 0.75rem;
     row-gap: 1.375rem;
+    position: sticky;
+    top: 0;
   }
 }
 
