--- a/src/components/MainContainer/MainContainer.module.css
+++ b/src/components/MainContainer/MainContainer.module.css
@@ -1,3 +1,4 @@
 .mainContainer{
-  padding-top: clamp(0.75rem, 2vw, 1.5rem);
+  padding-top: var(--container-padding-top);
+  padding-bottom: var(--container-padding-bottom);
 }
