--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,20 @@
   gap: 0.75rem;
   align-items: center;
   z-index: 200;
+  position: relative;
+}
+
+.headerBottom{
+  padding-bottom: 0.5rem;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-text-white);
+  z-index: 201;
+  border-bottom: var(--gray-border);
+  height: 5rem;
 }
 
 .headerDeskTop{
@@ -34,6 +48,10 @@
     display: flex;
     justify-content: center;
     width: 100%;
+  }
+
+  .headerBottom{
+    display: none;
   }
 }
 
