--- a/src/components/Header/parts/HeaderModal/HeaderModal.module.css
+++ b/src/components/Header/parts/HeaderModal/HeaderModal.module.css
@@ -45,7 +45,7 @@
   padding-left: 1.1875rem;
 }
 
-.modalDownSoc1als{
+.modalDownSocials{
   display: flex;
   align-items: center;
   justify-content: center;
