--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,7 +10,7 @@
   --color-red: #ff0000;
 
   --main-border-radius: 0.75rem;
-  --main-font: 'Inter', sans-serif;
+  --main-font: 'Inter';
   --main-transition: 0.2s;
   --main-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   --gray-border: 2px solid var(--color-gray-light);
