--- a/src/components/ContactsContainer/ContactsContainer.module.css
+++ b/src/components/ContactsContainer/ContactsContainer.module.css
@@ -1,3 +1,49 @@
 .contactsContainer{
+  padding-top: var(--container-padding-top);
+  padding-bottom: var(--container-padding-bottom);
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+  line-height: 1.2;
+}
 
+.contactsInformation{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.informationList{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
+  padding: 1.5rem;
+}
+
+.informationItem{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.informationText{
+  font-size: clamp(1.25rem, 2vw, 1.5rem);
+}
+
+.contactsMap{
+  width: 100%;
+}
+
+@media (max-width: 75rem) {
+  .contactsInformation{
+    grid-template-columns: 1fr;
+    border: none;
+    background: var(--color-text-white);
+  }
+  .informationList{
+    padding-inline: 0;
+  }
+  .contactsMap{
+    height: clamp(16.5rem, 35.66vw, 26.75rem);
+  }
 }
