--- a/src/components/ContactsContainer/ContactsContainer.module.css
+++ b/src/components/ContactsContainer/ContactsContainer.module.css
@@ -42,6 +42,7 @@
   }
   .informationList{
     padding-inline: 0;
+    padding-bottom: 0;
   }
   .contactsMap{
     height: clamp(16.5rem, 35.66vw, 26.75rem);
