feat(contactsFrom): add red border on error

--- a/src/components/ContactsContainer/ContactsForm/ContactsForm.module.css
+++ b/src/components/ContactsContainer/ContactsForm/ContactsForm.module.css
@@ -66,6 +66,10 @@
   color: var(--color-text-light);
 }
 
+.isRed{
+  border: 2px solid var(--color-red);
+}
+
 .errorBlock{
   width: 100%;
   display: flex;
