feat(StocksContainer): prepare page

--- a/src/components/Header/parts/HeaderBottom/HeaderBottom.module.css
+++ b/src/components/Header/parts/HeaderBottom/HeaderBottom.module.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   background-color: var(--color-text-white);
   align-items: center;
+  z-index: 201;
 }
 
 .headerBottomButtons{
