--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,6 +73,15 @@ main{
   padding-inline: var(--padding-x);
 }
 
+.pageContainer{
+  padding-top: var(--container-padding-top);
+  padding-bottom: var(--container-padding-bottom);
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+  line-height: 1.2;
+}
+
 .headerIconLink{
   white-space: nowrap;
   display: flex;
