--- a/src/components/Modals/ModalText/ModalText.module.css
+++ b/src/components/Modals/ModalText/ModalText.module.css
@@ -18,6 +18,7 @@
   justify-content: center;
   padding-inline: clamp(2rem, 6.66vw, 5rem);
   padding-block: 2.5rem;
+  max-width: 90%;
 }
 
 .modalText{
