--- a/src/components/DeliveryContainer/DeliveryContainer.module.css
+++ b/src/components/DeliveryContainer/DeliveryContainer.module.css
@@ -1,5 +1,4 @@
 .deliveryList{
-  text-align: center;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: clamp(0.5rem, 3.125vw, 1.5rem);
@@ -8,36 +7,28 @@
 .deliveryItem{
   display: flex;
   flex-direction: column;
+  row-gap: 0.5rem;
+}
+
+.deliveryValueList{
+  text-align: center;
+}
+
+.deliveryValueItem{
   box-shadow: 0 0 13px 1px rgba(0, 0, 0, 0.15);
   align-items: center;
-  gap: 0.5rem;
   padding: clamp(0.5rem, 3.125vw, 1.5rem);
   border-radius: var(--main-border-radius);
 }
 
-.deliveryItemParagraph{
+.deliveryValueParagraph{
   font-size: clamp(1rem, 1.66vw, 1.25rem);
   font-weight: 400;
   color: var(--color-text-dark);
 }
 
-.deliveryItemTitle{
+.deliveryValueTitle{
   font-size: clamp(1.25rem, 2vw, 1.5rem);
-}
-
-.advantagesCardsList{
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: clamp(0.5rem, 3.125vw, 1.5rem);
-  text-align: left;
-}
-
-.advantagesCardsItem{
-  display: flex;
-  flex-direction: column;
-  row-gap: 0.5rem;
-  justify-content: flex-start;
-  align-items: flex-start;
 }
 
 .cardsParagraph{
@@ -47,40 +38,52 @@
 }
 
 .cardsTitle{
-  font-size: clamp(1rem, 1.5vw, 1.125rem);
+  font-size: 1.125rem;
 }
 
 .deliveryInformation{
   display: flex;
   justify-content: space-between;
-}
-
-.deliveryInformationText{
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+  gap: 2rem;
 }
 
 .deliveryInformationList{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 .deliveryInformationItem{
   max-width: 22rem;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
   gap: 0.75rem;
 }
 
-.deliveryMap{
+.deliveryInformationText{
+  align-items: flex-start;
+}
 
+.deliveryMap{
+  max-width: 53.25rem;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1 / 0.70422;
+}
+
+@media (max-width: 75rem) {
+  .deliveryInformation{
+    flex-direction: column-reverse;
+  }
+  .deliveryMap,
+  .deliveryInformationItem{
+    max-width: none;
+  }
 }
 
 @media (max-width: 48rem) {
-  .deliveryList{
+  .deliveryValueList{
     grid-template-columns: 1fr 1fr;
   }
   .advantagesCardsList{
