--- a/src/components/StocksContainer/StocksContainer.module.css
+++ b/src/components/StocksContainer/StocksContainer.module.css
@@ -20,10 +20,10 @@
 }
 
 .cardShow{
-  padding: 0.5rem;
+  border: none;
+  background-color: transparent;
   color: var(--color-red-accent);
-  cursor: pointer;
-  transition: color var(--main-transition);
+  margin-left: 0.5rem;
 }
 
 .cardImage{
