--- a/src/components/Containers/Header/parts/HeaderModal/HeaderModal.module.css
+++ b/src/components/Containers/Header/parts/HeaderModal/HeaderModal.module.css
@@ -1,6 +1,7 @@
 .headerModalInner{
   width: 100%;
   display: flex;
+  height: 100%;
   flex-direction: column;
   justify-content: space-between;
   z-index: 1000;
