fix(CitySelect): add profile and header synchronization. Improved structure.

--- a/src/components/Containers/Header/parts/CitySelect/CitySelect.module.css
+++ b/src/components/Containers/Header/parts/CitySelect/CitySelect.module.css
@@ -31,6 +31,10 @@
   transition: var(--main-transition);
 }
 
+.selectValueNoPadding{
+  padding-left: 0;
+}
+
 .selectList{
   z-index: 600;
   box-shadow:
