--- a/src/components/Containers/ProfileContainer/parts/ProfileData/ProfileData.module.css
+++ b/src/components/Containers/ProfileContainer/parts/ProfileData/ProfileData.module.css
@@ -1,8 +1,12 @@
 .profileData{
-
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
 }
 
 .profileDataUp{
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,7 +22,8 @@
   align-items: flex-start;
 }
 
-.profileChangeButton{
+.profileChangeButton,
+.profileExit{
   background-color: transparent;
   border: none;
 }
@@ -27,10 +32,28 @@
   fill: none;
 }
 
-.profileExit{
+.profileDataDown{
+  display: flex;
+  flex-direction: column;
+  border: var(--gray-border);
+  padding: 1rem;
+  gap: 2rem;
+}
+
+.profileDataDownBlock{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.profileSpan{
+  font-size: clamp(1rem, 1.6666vw, 1.25rem);
+}
+
+.profileInput{
+  font-size: clamp(1rem, 1.6666vw, 1.25rem);
   border: none;
-  background-color: transparent;
-  font-weight: 500;
+  cursor: text;
 }
 
 @media (hover: hover) {
