--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,6 +107,17 @@ main{
   border: 1px solid transparent;
 }
 
+.verifyPage{
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  padding-inline: 1rem;
+  text-align: center;
+}
+
 @media (hover: hover) {
   a:hover{
     color: var(--color-text-dark);
